--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="/">Car-App</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -12,12 +12,8 @@
             </ul>
             <ul class="navbar-nav">
                 <% if (isLoggedIn) { %>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/add-car">Adaugă Mașină</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/profile">Profil</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="/add-car">Adaugă Mașină</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/profile">Profil</a></li>
                     <li class="nav-item">
                         <form action="/logout" method="POST" class="d-inline">
                             <button type="submit" class="btn btn-link nav-link">Logout</button>
@@ -25,17 +21,13 @@
                     </li>
                 <% } else if (isGuest) { %>
                     <li class="nav-item">
-                         <form action="/logout" method="POST" class="d-inline">
+                        <form action="/logout" method="POST" class="d-inline">
                             <button type="submit" class="btn btn-link nav-link">Ieșire Vizitator</button>
                         </form>
                     </li>
                 <% } else { %>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/register">Înregistrare</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/register">Înregistrare</a></li>
                 <% } %>
             </ul>
         </div>
