FINAL FIX EJS: Simplificarea căii la 'navbar.ejs' pentru a rezolva rezoluția căii pe Render.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,4 +8,4 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<%- include('partials/navbar.ejs') %>
+<%- include('navbar.ejs') %>
